# com.github.Alacritty

./: .gitignore  .gitmodules  clean.sh  com.github.Alacritty.metainfo.xml  com.github.Alacritty.yml  generate.sh  pyproject.toml
