[tool.poetry]
name = "com.github.alacritty"
version = "0.1.0"
description = ""
authors = ["Nathan Graule <solarliner@gmail.com>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.8"
toml = "aiohttp"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
